[gd_scene load_steps=2 format=3 uid="uid://cky4nqic1lvew"]

[ext_resource type="Script" path="res://end_screen.gd" id="1_mupqe"]

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_mupqe")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
theme_override_font_sizes/font_size = 115
text = "END
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SCORE : 0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "HIGHSCORE : 0"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="ReplayButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.65
text = "REPLAY"

[node name="Control2" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Control2" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control3" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="MenuButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.65
text = "MAIN MENU"

[node name="Control5" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Control3" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Control6" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="QuitButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.65
text = "QUIT"

[node name="Control7" type="Control" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25

[node name="Control4" type="Control" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer3/QuitButton" to="." method="_on_quit_button_pressed"]
